--- a/documentation/components/MainStatsComponent.html
+++ b/documentation/components/MainStatsComponent.html
@@ -128,6 +128,12 @@
                                 <a href="#dataService">dataService</a>
                             </li>
                             <li>
+                                <a href="#faExchangeAlt">faExchangeAlt</a>
+                            </li>
+                            <li>
+                                <a href="#faPaintBrush">faPaintBrush</a>
+                            </li>
+                            <li>
                                     <span class="modifier">Public</span>
                                 <a href="#route">route</a>
                             </li>
@@ -158,12 +164,14 @@
                 </tr>
                         <tr>
                             <td class="col-md-4">
-                                <div class="io-line">Defined in <a href="" data-line="12" class="link-to-prism">src/app/components/main-stats/main-stats.component.ts:12</a></div>
+                                <div class="io-line">Defined in <a href="" data-line="33" class="link-to-prism">src/app/components/main-stats/main-stats.component.ts:33</a></div>
                             </td>
                         </tr>
 
                 <tr>
                     <td class="col-md-4">
+                            <div class="io-description"><p>Subscribes to graph id and renders the graph if the view is already initialized</p>
+</div>
                             <div>
                                     <b>Parameters :</b>
                                     <table class="params">
@@ -172,6 +180,7 @@
                                                 <td>Name</td>
                                                     <td>Type</td>
                                                 <td>Optional</td>
+                                                    <td>Description</td>
                                             </tr>
                                         </thead>
                                         <tbody>
@@ -186,6 +195,10 @@
                                                             No
                                                     </td>
                                                     
+                                                        <td>
+                                                                <code><p>Service to read URL</p>
+</code>
+                                                        </td>
                                                 </tr>
                                                 <tr>
                                                         <td>dataService</td>
@@ -198,6 +211,10 @@
                                                             No
                                                     </td>
                                                     
+                                                        <td>
+                                                                <code><p>Service to read and write globally accessible data</p>
+</code>
+                                                        </td>
                                                 </tr>
                                         </tbody>
                                     </table>
@@ -239,10 +256,81 @@
                     </tr>
                         <tr>
                             <td class="col-md-4">
-                                    <div class="io-line">Defined in <a href="" data-line="14" class="link-to-prism">src/app/components/main-stats/main-stats.component.ts:14</a></div>
+                                    <div class="io-line">Defined in <a href="" data-line="41" class="link-to-prism">src/app/components/main-stats/main-stats.component.ts:41</a></div>
                             </td>
                         </tr>
 
+                <tr>
+                    <td class="col-md-4">
+                        <div class="io-description">Service to read and write globally accessible data</div>
+                    </td>
+                </tr>
+
+            </tbody>
+        </table>
+        <table class="table table-sm table-bordered">
+            <tbody>
+                <tr>
+                    <td class="col-md-4">
+                        <a name="faExchangeAlt"></a>
+                        <span class="name">
+                            <b>
+                            faExchangeAlt</b>
+                            <a href="#faExchangeAlt"><span class="icon ion-ios-link"></span></a>
+                        </span>
+                    </td>
+                </tr>
+                    <tr>
+                        <td class="col-md-4">
+                            <i>Default value : </i><code>faExchangeAlt</code>
+                        </td>
+                    </tr>
+                        <tr>
+                            <td class="col-md-4">
+                                    <div class="io-line">Defined in <a href="" data-line="28" class="link-to-prism">src/app/components/main-stats/main-stats.component.ts:28</a></div>
+                            </td>
+                        </tr>
+
+                <tr>
+                    <td class="col-md-4">
+                        <div class="io-description"><p>Icon: faExchangeAlt
+See <a href="https://fontawesome.com/icons?d=gallery">Fontawesome</a> for further infos</p>
+</div>
+                    </td>
+                </tr>
+
+            </tbody>
+        </table>
+        <table class="table table-sm table-bordered">
+            <tbody>
+                <tr>
+                    <td class="col-md-4">
+                        <a name="faPaintBrush"></a>
+                        <span class="name">
+                            <b>
+                            faPaintBrush</b>
+                            <a href="#faPaintBrush"><span class="icon ion-ios-link"></span></a>
+                        </span>
+                    </td>
+                </tr>
+                    <tr>
+                        <td class="col-md-4">
+                            <i>Default value : </i><code>faPaintBrush</code>
+                        </td>
+                    </tr>
+                        <tr>
+                            <td class="col-md-4">
+                                    <div class="io-line">Defined in <a href="" data-line="22" class="link-to-prism">src/app/components/main-stats/main-stats.component.ts:22</a></div>
+                            </td>
+                        </tr>
+
+                <tr>
+                    <td class="col-md-4">
+                        <div class="io-description"><p>Icon: faPaintBrush
+See <a href="https://fontawesome.com/icons?d=gallery">Fontawesome</a> for further infos</p>
+</div>
+                    </td>
+                </tr>
 
             </tbody>
         </table>
@@ -267,10 +355,15 @@
                     </tr>
                         <tr>
                             <td class="col-md-4">
-                                    <div class="io-line">Defined in <a href="" data-line="14" class="link-to-prism">src/app/components/main-stats/main-stats.component.ts:14</a></div>
+                                    <div class="io-line">Defined in <a href="" data-line="41" class="link-to-prism">src/app/components/main-stats/main-stats.component.ts:41</a></div>
                             </td>
                         </tr>
 
+                <tr>
+                    <td class="col-md-4">
+                        <div class="io-description">Service to read URL</div>
+                    </td>
+                </tr>
 
             </tbody>
         </table>
@@ -294,10 +387,16 @@
                     </tr>
                         <tr>
                             <td class="col-md-4">
-                                    <div class="io-line">Defined in <a href="" data-line="12" class="link-to-prism">src/app/components/main-stats/main-stats.component.ts:12</a></div>
+                                    <div class="io-line">Defined in <a href="" data-line="33" class="link-to-prism">src/app/components/main-stats/main-stats.component.ts:33</a></div>
                             </td>
                         </tr>
 
+                <tr>
+                    <td class="col-md-4">
+                        <div class="io-description"><p>Selected network of type <a href="../interfaces/NeNetwork.html">NeNetwork</a></p>
+</div>
+                    </td>
+                </tr>
 
             </tbody>
         </table>
@@ -311,15 +410,42 @@
 import {ActivatedRoute} from &#x27;@angular/router&#x27;;
 import {NeNetwork} from &#x27;../../models/ne-network&#x27;;
 import {DataService} from &#x27;../../services/data.service&#x27;;
+import {faPaintBrush, faExchangeAlt} from &#x27;@fortawesome/free-solid-svg-icons&#x27;;
 
 @Component({
   selector: &#x27;app-main-stats&#x27;,
   templateUrl: &#x27;./main-stats.component.html&#x27;,
   styleUrls: [&#x27;./main-stats.component.scss&#x27;]
 })
+
+/**
+ * Component responsible for graph statistics and description
+ */
 export class MainStatsComponent {
+
+  /**
+   * Icon: faPaintBrush
+   * See {@link https://fontawesome.com/icons?d&#x3D;gallery|Fontawesome} for further infos
+   */
+  faPaintBrush &#x3D; faPaintBrush;
+
+  /**
+   * Icon: faExchangeAlt
+   * See {@link https://fontawesome.com/icons?d&#x3D;gallery|Fontawesome} for further infos
+   */
+  faExchangeAlt &#x3D; faExchangeAlt;
+
+  /**
+   * Selected network of type {@link NeNetwork|NeNetwork}
+   */
   selectedNetwork: NeNetwork;
 
+  /**
+   * Subscribes to graph id and renders the graph if the view is already initialized
+   *
+   * @param route Service to read URL
+   * @param dataService Service to read and write globally accessible data
+   */
   constructor(public route: ActivatedRoute, public dataService: DataService) {
     this.route.paramMap.subscribe(params &#x3D;&gt; {
       this.selectedNetwork &#x3D; this.dataService.networksParsed.find(x &#x3D;&gt; x.id &#x3D;&#x3D;&#x3D; Number(params.get(&#x27;id&#x27;)));
@@ -342,8 +468,16 @@ export class MainStatsComponent {
       &lt;h6&gt;{{&#x27;MAIN_STATS_GRAPH_INFO_NODES&#x27; | translate}}: {{selectedNetwork.nodeCount}}&lt;/h6&gt;
       &lt;h6&gt;{{&#x27;MAIN_STATS_GRAPH_INFO_EDGES&#x27; | translate}}: {{selectedNetwork.edgeCount}}&lt;/h6&gt;
       &lt;h6&gt;{{&#x27;MAIN_STATS_GRAPH_INFO_CLASSES&#x27; | translate}}: {{selectedNetwork.cssClassCount}}&lt;/h6&gt;
+      &lt;a class&#x3D;&quot;btn btn-block btn-outline-success mt-4&quot; role&#x3D;&quot;button&quot;
+         [routerLink]&#x3D;&quot;[&#x27;&#x27;, { outlets: {primary: [&#x27;graph&#x27;, selectedNetwork.id], sidebar: [&#x27;edit&#x27;, selectedNetwork.id]} }]&quot;&gt;
+        &lt;fa-icon [icon]&#x3D;&quot;faPaintBrush&quot;&gt;&lt;/fa-icon&gt;&amp;nbsp;{{&#x27;MAIN_STATS_BTN_RENDER&#x27; | translate}}
+      &lt;/a&gt;
+      &lt;a class&#x3D;&quot;btn btn-block btn-outline-secondary mt-2&quot; role&#x3D;&quot;button&quot;
+         [routerLink]&#x3D;&quot;[&#x27;&#x27;, { outlets: {primary: [&#x27;graph&#x27;, selectedNetwork.id], sidebar: [&#x27;compare&#x27;, selectedNetwork.id]} }]&quot;&gt;
+        &lt;fa-icon [icon]&#x3D;&quot;faExchangeAlt&quot;&gt;&lt;/fa-icon&gt;&amp;nbsp;{{&#x27;MAIN_STATS_BTN_COMPARE&#x27; | translate}}
+      &lt;/a&gt;
     &lt;/div&gt;
-    &lt;div class&#x3D;&quot;col-9 card&quot;&gt;
+    &lt;div class&#x3D;&quot;col-9 card&quot; *ngIf&#x3D;&quot;selectedNetwork.networkInformation.rightsholder || selectedNetwork.networkInformation.networkType || selectedNetwork.networkInformation.organism || selectedNetwork.networkInformation.description&quot;&gt;
       &lt;div class&#x3D;&quot;card-body&quot;&gt;
         &lt;p *ngIf&#x3D;&quot;selectedNetwork.networkInformation.rightsholder&quot;&gt;
           &lt;b [innerHTML]&#x3D;&quot;&quot;&gt;{{&#x27;MAIN_STATS_GRAPH_INFO_NW_RIGHTSHOLDER&#x27; | translate}}:&lt;/b&gt;&amp;nbsp;
@@ -363,6 +497,23 @@ export class MainStatsComponent {
   &lt;/div&gt;
 
   &lt;hr&gt;
+
+  &lt;h3 *ngIf&#x3D;&quot;selectedNetwork.aspectKeyValuesNodes.length &gt; 0&quot;&gt;{{&#x27;MAIN_STATS_GRAPH_ATTRIBUTES_NODES_TITLE&#x27; | translate}}&lt;/h3&gt;
+  &lt;ul *ngIf&#x3D;&quot;selectedNetwork.aspectKeyValuesNodes.length &gt; 0&quot;&gt;
+    &lt;li *ngFor&#x3D;&quot;let aspect of selectedNetwork.aspectKeyValuesNodes&quot;&gt;
+      {{aspect.name}}
+    &lt;/li&gt;
+  &lt;/ul&gt;
+
+  &lt;h3 *ngIf&#x3D;&quot;selectedNetwork.aspectKeyValuesEdges.length &gt; 0&quot;&gt;{{&#x27;MAIN_STATS_GRAPH_ATTRIBUTES_EDGES_TITLE&#x27; | translate}}&lt;/h3&gt;
+  &lt;ul *ngIf&#x3D;&quot;selectedNetwork.aspectKeyValuesEdges.length &gt; 0&quot;&gt;
+    &lt;li *ngFor&#x3D;&quot;let aspect of selectedNetwork.aspectKeyValuesEdges&quot;&gt;
+      {{aspect.name}}
+    &lt;/li&gt;
+  &lt;/ul&gt;
+
+  &lt;hr *ngIf&#x3D;&quot;selectedNetwork.aspectKeyValuesNodes.length &gt; 0 || selectedNetwork.aspectKeyValuesEdges.length &gt; 0&quot;&gt;
+
 &lt;/ng-container&gt;
 
 &lt;app-main-info&gt;&lt;/app-main-info&gt;
@@ -401,8 +552,8 @@ export class MainStatsComponent {
 <script src="../js/libs/htmlparser.js"></script>
 <script src="../js/libs/deep-iterator.js"></script>
 <script>
-        var COMPONENT_TEMPLATE = '<div><ng-container *ngIf="selectedNetwork">  <h1>{{\'MAIN_STATS_TITLE\' | translate}}</h1>  <hr>  <h3>{{\'MAIN_STATS_GRAPH_INFO_TITLE\' | translate}} "{{selectedNetwork.networkInformation.name}}"</h3>  <div class="row mt-3">    <div class="col-3">      <h6>{{\'MAIN_STATS_GRAPH_INFO_NODES\' | translate}}: {{selectedNetwork.nodeCount}}</h6>      <h6>{{\'MAIN_STATS_GRAPH_INFO_EDGES\' | translate}}: {{selectedNetwork.edgeCount}}</h6>      <h6>{{\'MAIN_STATS_GRAPH_INFO_CLASSES\' | translate}}: {{selectedNetwork.cssClassCount}}</h6>    </div>    <div class="col-9 card">      <div class="card-body">        <p *ngIf="selectedNetwork.networkInformation.rightsholder">          <b [innerHTML]="">{{\'MAIN_STATS_GRAPH_INFO_NW_RIGHTSHOLDER\' | translate}}:</b>&nbsp;          <span [innerHTML]="selectedNetwork.networkInformation.rightsholder"></span>        </p>        <p *ngIf="selectedNetwork.networkInformation.networkType">          <b>{{\'MAIN_STATS_GRAPH_INFO_NW_TYPE\' | translate}}:</b>&nbsp;<span [innerHTML]="selectedNetwork.networkInformation.networkType"></span>        </p>        <p *ngIf="selectedNetwork.networkInformation.organism">          <b>{{\'MAIN_STATS_GRAPH_INFO_NW_ORGANISM\' | translate}}:</b>&nbsp;<span [innerHTML]="selectedNetwork.networkInformation.organism"></span>        </p>        <p *ngIf="selectedNetwork.networkInformation.description">          <b>{{\'MAIN_STATS_GRAPH_INFO_NW_DESCRIPTION\' | translate}}:</b>&nbsp;<span [innerHTML]="selectedNetwork.networkInformation.description"></span>        </p>      </div>    </div>  </div>  <hr></ng-container><app-main-info></app-main-info></div>'
-    var COMPONENTS = [{'name': 'AppComponent', 'selector': 'app-root'},{'name': 'MainGraphComponent', 'selector': 'app-main-graph'},{'name': 'MainInfoComponent', 'selector': 'app-main-info'},{'name': 'MainStatsComponent', 'selector': 'app-main-stats'},{'name': 'SidebarCompareComponent', 'selector': 'app-sidebar-compare'},{'name': 'SidebarEditComponent', 'selector': 'app-sidebar-edit'},{'name': 'SidebarManageComponent', 'selector': 'app-sidebar-manage'}];
+        var COMPONENT_TEMPLATE = '<div><ng-container *ngIf="selectedNetwork">  <h1>{{\'MAIN_STATS_TITLE\' | translate}}</h1>  <hr>  <h3>{{\'MAIN_STATS_GRAPH_INFO_TITLE\' | translate}} "{{selectedNetwork.networkInformation.name}}"</h3>  <div class="row mt-3">    <div class="col-3">      <h6>{{\'MAIN_STATS_GRAPH_INFO_NODES\' | translate}}: {{selectedNetwork.nodeCount}}</h6>      <h6>{{\'MAIN_STATS_GRAPH_INFO_EDGES\' | translate}}: {{selectedNetwork.edgeCount}}</h6>      <h6>{{\'MAIN_STATS_GRAPH_INFO_CLASSES\' | translate}}: {{selectedNetwork.cssClassCount}}</h6>      <a class="btn btn-block btn-outline-success mt-4" role="button"         [routerLink]="[\'\', { outlets: {primary: [\'graph\', selectedNetwork.id], sidebar: [\'edit\', selectedNetwork.id]} }]">        <fa-icon [icon]="faPaintBrush"></fa-icon>&nbsp;{{\'MAIN_STATS_BTN_RENDER\' | translate}}      </a>      <a class="btn btn-block btn-outline-secondary mt-2" role="button"         [routerLink]="[\'\', { outlets: {primary: [\'graph\', selectedNetwork.id], sidebar: [\'compare\', selectedNetwork.id]} }]">        <fa-icon [icon]="faExchangeAlt"></fa-icon>&nbsp;{{\'MAIN_STATS_BTN_COMPARE\' | translate}}      </a>    </div>    <div class="col-9 card" *ngIf="selectedNetwork.networkInformation.rightsholder || selectedNetwork.networkInformation.networkType || selectedNetwork.networkInformation.organism || selectedNetwork.networkInformation.description">      <div class="card-body">        <p *ngIf="selectedNetwork.networkInformation.rightsholder">          <b [innerHTML]="">{{\'MAIN_STATS_GRAPH_INFO_NW_RIGHTSHOLDER\' | translate}}:</b>&nbsp;          <span [innerHTML]="selectedNetwork.networkInformation.rightsholder"></span>        </p>        <p *ngIf="selectedNetwork.networkInformation.networkType">          <b>{{\'MAIN_STATS_GRAPH_INFO_NW_TYPE\' | translate}}:</b>&nbsp;<span [innerHTML]="selectedNetwork.networkInformation.networkType"></span>        </p>        <p *ngIf="selectedNetwork.networkInformation.organism">          <b>{{\'MAIN_STATS_GRAPH_INFO_NW_ORGANISM\' | translate}}:</b>&nbsp;<span [innerHTML]="selectedNetwork.networkInformation.organism"></span>        </p>        <p *ngIf="selectedNetwork.networkInformation.description">          <b>{{\'MAIN_STATS_GRAPH_INFO_NW_DESCRIPTION\' | translate}}:</b>&nbsp;<span [innerHTML]="selectedNetwork.networkInformation.description"></span>        </p>      </div>    </div>  </div>  <hr>  <h3 *ngIf="selectedNetwork.aspectKeyValuesNodes.length > 0">{{\'MAIN_STATS_GRAPH_ATTRIBUTES_NODES_TITLE\' | translate}}</h3>  <ul *ngIf="selectedNetwork.aspectKeyValuesNodes.length > 0">    <li *ngFor="let aspect of selectedNetwork.aspectKeyValuesNodes">      {{aspect.name}}    </li>  </ul>  <h3 *ngIf="selectedNetwork.aspectKeyValuesEdges.length > 0">{{\'MAIN_STATS_GRAPH_ATTRIBUTES_EDGES_TITLE\' | translate}}</h3>  <ul *ngIf="selectedNetwork.aspectKeyValuesEdges.length > 0">    <li *ngFor="let aspect of selectedNetwork.aspectKeyValuesEdges">      {{aspect.name}}    </li>  </ul>  <hr *ngIf="selectedNetwork.aspectKeyValuesNodes.length > 0 || selectedNetwork.aspectKeyValuesEdges.length > 0"></ng-container><app-main-info></app-main-info></div>'
+    var COMPONENTS = [{'name': 'AppComponent', 'selector': 'app-root'},{'name': 'MainGraphComponent', 'selector': 'app-main-graph'},{'name': 'MainInfoComponent', 'selector': 'app-main-info'},{'name': 'MainMappingsComponent', 'selector': 'app-main-mappings'},{'name': 'MainMappingsNewComponent', 'selector': 'app-main-mappings-new'},{'name': 'MainStatsComponent', 'selector': 'app-main-stats'},{'name': 'SidebarCompareComponent', 'selector': 'app-sidebar-compare'},{'name': 'SidebarEditComponent', 'selector': 'app-sidebar-edit'},{'name': 'SidebarManageComponent', 'selector': 'app-sidebar-manage'}];
     var DIRECTIVES = [];
     var ACTUAL_COMPONENT = {'name': 'MainStatsComponent'};
 </script>
