--- a/documentation/components/AppComponent.html
+++ b/documentation/components/AppComponent.html
@@ -212,12 +212,14 @@
                 </tr>
                         <tr>
                             <td class="col-md-4">
-                                <div class="io-line">Defined in <a href="" data-line="37" class="link-to-prism">src/app/app.component.ts:37</a></div>
+                                <div class="io-line">Defined in <a href="" data-line="47" class="link-to-prism">src/app/app.component.ts:47</a></div>
                             </td>
                         </tr>
 
                 <tr>
                     <td class="col-md-4">
+                            <div class="io-description"><p>Initializes translation and renders the desired mock-ups</p>
+</div>
                             <div>
                                     <b>Parameters :</b>
                                     <table class="params">
@@ -226,6 +228,7 @@
                                                 <td>Name</td>
                                                     <td>Type</td>
                                                 <td>Optional</td>
+                                                    <td>Description</td>
                                             </tr>
                                         </thead>
                                         <tbody>
@@ -240,6 +243,10 @@
                                                             No
                                                     </td>
                                                     
+                                                        <td>
+                                                                <code><p>Service to manage languages</p>
+</code>
+                                                        </td>
                                                 </tr>
                                                 <tr>
                                                         <td>parseService</td>
@@ -252,6 +259,10 @@
                                                             No
                                                     </td>
                                                     
+                                                        <td>
+                                                                <code><p>Service to handle parsing of mock-ups</p>
+</code>
+                                                        </td>
                                                 </tr>
                                                 <tr>
                                                         <td>dataService</td>
@@ -264,6 +275,10 @@
                                                             No
                                                     </td>
                                                     
+                                                        <td>
+                                                                <code><p>Service to read and write globally accessible data</p>
+</code>
+                                                        </td>
                                                 </tr>
                                                 <tr>
                                                         <td>http</td>
@@ -276,6 +291,10 @@
                                                             No
                                                     </td>
                                                     
+                                                        <td>
+                                                                <code><p>Service to handle HTTP requests and file inputs</p>
+</code>
+                                                        </td>
                                                 </tr>
                                         </tbody>
                                     </table>
@@ -317,14 +336,20 @@
 
             <tr>
                 <td class="col-md-4">
-                    <div class="io-line">Defined in <a href="" data-line="104"
-                            class="link-to-prism">src/app/app.component.ts:104</a></div>
+                    <div class="io-line">Defined in <a href="" data-line="131"
+                            class="link-to-prism">src/app/app.component.ts:131</a></div>
                 </td>
             </tr>
 
 
             <tr>
                 <td class="col-md-4">
+                    <div class="io-description"><p>Simple implementation to adjust the page layout:</p>
+<ul>
+   <li><b>left-click</b>: main view decreases, sidebar increases</li>
+   <li><b>right-click</b>: main view increases, sidebar decreases</li>
+   <li><b>Ctrl + left-click</b></li>: resets widths, see <a href="../components/AppComponent.html#resetPageLayout">AppComponent</a>
+</ul></div>
 
                     <div class="io-description">
                         <b>Parameters :</b>
@@ -334,6 +359,7 @@
                                     <td>Name</td>
                                     <td>Type</td>
                                     <td>Optional</td>
+                                    <td>Description</td>
                                 </tr>
                             </thead>
                             <tbody>
@@ -348,6 +374,10 @@
                                     </td>
 
 
+                                    <td>
+                                        <p>event to fetch all pressed keys</p>
+
+                                    </td>
                                 </tr>
                                 <tr>
                                     <td>direction</td>
@@ -360,6 +390,10 @@
                                     </td>
 
 
+                                    <td>
+                                        <p>can be right or left</p>
+
+                                    </td>
                                 </tr>
                             </tbody>
                         </table>
@@ -401,8 +435,8 @@
 
             <tr>
                 <td class="col-md-4">
-                    <div class="io-line">Defined in <a href="" data-line="74"
-                            class="link-to-prism">src/app/app.component.ts:74</a></div>
+                    <div class="io-line">Defined in <a href="" data-line="92"
+                            class="link-to-prism">src/app/app.component.ts:92</a></div>
                 </td>
             </tr>
 
@@ -482,8 +516,8 @@
 
             <tr>
                 <td class="col-md-4">
-                    <div class="io-line">Defined in <a href="" data-line="61"
-                            class="link-to-prism">src/app/app.component.ts:61</a></div>
+                    <div class="io-line">Defined in <a href="" data-line="79"
+                            class="link-to-prism">src/app/app.component.ts:79</a></div>
                 </td>
             </tr>
 
@@ -525,8 +559,8 @@
 
             <tr>
                 <td class="col-md-4">
-                    <div class="io-line">Defined in <a href="" data-line="96"
-                            class="link-to-prism">src/app/app.component.ts:96</a></div>
+                    <div class="io-line">Defined in <a href="" data-line="114"
+                            class="link-to-prism">src/app/app.component.ts:114</a></div>
                 </td>
             </tr>
 
@@ -604,8 +638,8 @@
 
             <tr>
                 <td class="col-md-4">
-                    <div class="io-line">Defined in <a href="" data-line="88"
-                            class="link-to-prism">src/app/app.component.ts:88</a></div>
+                    <div class="io-line">Defined in <a href="" data-line="106"
+                            class="link-to-prism">src/app/app.component.ts:106</a></div>
                 </td>
             </tr>
 
@@ -681,14 +715,16 @@
 
             <tr>
                 <td class="col-md-4">
-                    <div class="io-line">Defined in <a href="" data-line="127"
-                            class="link-to-prism">src/app/app.component.ts:127</a></div>
+                    <div class="io-line">Defined in <a href="" data-line="157"
+                            class="link-to-prism">src/app/app.component.ts:157</a></div>
                 </td>
             </tr>
 
 
             <tr>
                 <td class="col-md-4">
+                    <div class="io-description"><p>Resets page layout to <a href="../components/AppComponent.html#widthMain">AppComponent</a> and <a href="../components/AppComponent.html#widthSidebar">AppComponent</a></p>
+</div>
 
                     <div class="io-description">
                         <b>Returns : </b>        <code><a href="https://www.typescriptlang.org/docs/handbook/basic-types.html" target="_blank" >void</a></code>
@@ -725,10 +761,15 @@
                     </tr>
                         <tr>
                             <td class="col-md-4">
-                                    <div class="io-line">Defined in <a href="" data-line="42" class="link-to-prism">src/app/app.component.ts:42</a></div>
+                                    <div class="io-line">Defined in <a href="" data-line="60" class="link-to-prism">src/app/app.component.ts:60</a></div>
                             </td>
                         </tr>
 
+                <tr>
+                    <td class="col-md-4">
+                        <div class="io-description">Service to read and write globally accessible data</div>
+                    </td>
+                </tr>
 
             </tbody>
         </table>
@@ -759,7 +800,7 @@
                     </tr>
                         <tr>
                             <td class="col-md-4">
-                                    <div class="io-line">Defined in <a href="" data-line="37" class="link-to-prism">src/app/app.component.ts:37</a></div>
+                                    <div class="io-line">Defined in <a href="" data-line="47" class="link-to-prism">src/app/app.component.ts:47</a></div>
                             </td>
                         </tr>
 
@@ -799,7 +840,7 @@
                     </tr>
                         <tr>
                             <td class="col-md-4">
-                                    <div class="io-line">Defined in <a href="" data-line="27" class="link-to-prism">src/app/app.component.ts:27</a></div>
+                                    <div class="io-line">Defined in <a href="" data-line="37" class="link-to-prism">src/app/app.component.ts:37</a></div>
                             </td>
                         </tr>
 
@@ -839,7 +880,7 @@
                     </tr>
                         <tr>
                             <td class="col-md-4">
-                                    <div class="io-line">Defined in <a href="" data-line="32" class="link-to-prism">src/app/app.component.ts:32</a></div>
+                                    <div class="io-line">Defined in <a href="" data-line="42" class="link-to-prism">src/app/app.component.ts:42</a></div>
                             </td>
                         </tr>
 
@@ -877,10 +918,16 @@
                     </tr>
                         <tr>
                             <td class="col-md-4">
-                                    <div class="io-line">Defined in <a href="" data-line="19" class="link-to-prism">src/app/app.component.ts:19</a></div>
+                                    <div class="io-line">Defined in <a href="" data-line="22" class="link-to-prism">src/app/app.component.ts:22</a></div>
                             </td>
                         </tr>
 
+                <tr>
+                    <td class="col-md-4">
+                        <div class="io-description"><p>Title of the application is ndex-edit</p>
+</div>
+                    </td>
+                </tr>
 
             </tbody>
         </table>
@@ -905,10 +952,15 @@
                     </tr>
                         <tr>
                             <td class="col-md-4">
-                                    <div class="io-line">Defined in <a href="" data-line="40" class="link-to-prism">src/app/app.component.ts:40</a></div>
+                                    <div class="io-line">Defined in <a href="" data-line="58" class="link-to-prism">src/app/app.component.ts:58</a></div>
                             </td>
                         </tr>
 
+                <tr>
+                    <td class="col-md-4">
+                        <div class="io-description">Service to manage languages</div>
+                    </td>
+                </tr>
 
             </tbody>
         </table>
@@ -937,10 +989,16 @@
                     </tr>
                         <tr>
                             <td class="col-md-4">
-                                    <div class="io-line">Defined in <a href="" data-line="21" class="link-to-prism">src/app/app.component.ts:21</a></div>
+                                    <div class="io-line">Defined in <a href="" data-line="27" class="link-to-prism">src/app/app.component.ts:27</a></div>
                             </td>
                         </tr>
 
+                <tr>
+                    <td class="col-md-4">
+                        <div class="io-description"><p>Main: default page layout is 60%</p>
+</div>
+                    </td>
+                </tr>
 
             </tbody>
         </table>
@@ -969,10 +1027,16 @@
                     </tr>
                         <tr>
                             <td class="col-md-4">
-                                    <div class="io-line">Defined in <a href="" data-line="22" class="link-to-prism">src/app/app.component.ts:22</a></div>
+                                    <div class="io-line">Defined in <a href="" data-line="32" class="link-to-prism">src/app/app.component.ts:32</a></div>
                             </td>
                         </tr>
 
+                <tr>
+                    <td class="col-md-4">
+                        <div class="io-description"><p>Sidebar: default page layout is 38%</p>
+</div>
+                    </td>
+                </tr>
 
             </tbody>
         </table>
@@ -988,7 +1052,6 @@ import {ParseService} from &#x27;./services/parse.service&#x27;;
 import {NeNetwork} from &#x27;./models/ne-network&#x27;;
 import {DataService} from &#x27;./services/data.service&#x27;;
 import {HttpClient} from &#x27;@angular/common/http&#x27;;
-import {GraphService} from &#x27;./services/graph.service&#x27;;
 
 @Component({
   selector: &#x27;app-root&#x27;,
@@ -1000,9 +1063,20 @@ import {GraphService} from &#x27;./services/graph.service&#x27;;
  * Root component of the application
  */
 export class AppComponent {
+
+  /**
+   * Title of the application is ndex-edit
+   */
   title &#x3D; &#x27;ndex-edit&#x27;;
 
+  /**
+   * Main: default page layout is 60%
+   */
   widthMain &#x3D; &#x27;width-60&#x27;;
+
+  /**
+   * Sidebar: default page layout is 38%
+   */
   widthSidebar &#x3D; &#x27;width-38&#x27;;
 
   /**
@@ -1020,6 +1094,14 @@ export class AppComponent {
    */
   private readonly defaultLanguage &#x3D; &#x27;en&#x27;;
 
+  /**
+   * Initializes translation and renders the desired mock-ups
+   *
+   * @param translateService Service to manage languages
+   * @param parseService Service to handle parsing of mock-ups
+   * @param dataService Service to read and write globally accessible data
+   * @param http Service to handle HTTP requests and file inputs
+   */
   constructor(
     public translateService: TranslateService,
     private parseService: ParseService,
@@ -1084,7 +1166,16 @@ export class AppComponent {
       .catch(error &#x3D;&gt; console.log(error));
   }
 
-
+  /**
+   * Simple implementation to adjust the page layout:
+   * &lt;ul&gt;
+   *   &lt;li&gt;&lt;b&gt;left-click&lt;/b&gt;: main view decreases, sidebar increases&lt;/li&gt;
+   *   &lt;li&gt;&lt;b&gt;right-click&lt;/b&gt;: main view increases, sidebar decreases&lt;/li&gt;
+   *   &lt;li&gt;&lt;b&gt;Ctrl + left-click&lt;/b&gt;&lt;/li&gt;: resets widths, see {@link AppComponent#resetPageLayout}
+   * &lt;/ul&gt;
+   * @param e event to fetch all pressed keys
+   * @param direction can be right or left
+   */
   handleClickEvent(e: MouseEvent, direction: string): void {
     if (e.ctrlKey) {
       this.resetPageLayout();
@@ -1108,6 +1199,9 @@ export class AppComponent {
     }
   }
 
+  /**
+   * Resets page layout to {@link AppComponent#widthMain} and {@link AppComponent#widthSidebar}
+   */
   resetPageLayout(): void {
     this.widthSidebar &#x3D; &#x27;width-38&#x27;;
     this.widthMain &#x3D; &#x27;width-60&#x27;;
