--- a/src/app/components/sidebar-edit/sidebar-edit.component.html
+++ b/src/app/components/sidebar-edit/sidebar-edit.component.html
@@ -23,7 +23,7 @@
         <b>{{attribute}}</b>
       </a>
     </h5>
-    <canvas id="mappingsChart" baseChart [ngStyle]="{'width.%': 100}"
+    <canvas id="mappingsChart" baseChart
             [chartType]="'line'"
             [legend]="true"
             [datasets]="lineChartData"
